[fix-datatable-scrollbar-width] Remove the parameter overriding the primevue datatable style

--- a/src/styles/lck/_datatables.scss
+++ b/src/styles/lck/_datatables.scss
@@ -230,7 +230,6 @@ td.sticky-column-cells {
 
   .p-datatable-tbody > tr > td {
     overflow: hidden;
-    overflow-y: visible;
     white-space: nowrap;
     text-overflow: ellipsis;
   }
